--- a/HW5Lohinava.html
+++ b/HW5Lohinava.html
@@ -79,7 +79,7 @@
 
     <img src="tiramisu.jpg" alt="Порция тирамису" class="picture" id="tiramisuPhoto" />
 
-    <p>Тирамису — очень воздушный, нежный итальянский десерт, с изумительным контрастом сладкого сливочного крема и горьковатого вкуса крепкого кофе.
+    <p>Тирамису &#8212; очень воздушный, нежный итальянский десерт, с изумительным контрастом сладкого сливочного крема и горьковатого вкуса крепкого кофе.
     </p>
 
     <h3>Ингредиенты</h3>
@@ -198,16 +198,16 @@
 
     <ol>
 
-      <li>Корни имбиря вымыть, очистить и мелко натереть — для печенья нужны две чайные ложки тертого имбиря.
+      <li>Корни имбиря вымыть, очистить и мелко натереть &#8212; для печенья нужны две чайные ложки тертого имбиря.
       </li>
 
       <li>В блендере на высокой скорости смешать нарезанное крупными кубиками холодное масло с коричневым сахаром и щепоткой соли, затем добавить яичный желток и снова довести до однородности.
       </li>
 
-      <li> Муку просеять вместе с ванильным сахаром, разрыхлителем и пряничными специями. Эту смесь и тертый имбирь добавить в чашу блендера к маслу — постепенно, небольшими порциями. Замешивать тесто лучше с помощью блендера, а не руками: песочное тесто не стоит перегревать. К тому же руками можно перемесить тесто, и оно будет слишком жестким. Готовое тесто нужно поставить на час в холодильник.
+      <li> Муку просеять вместе с ванильным сахаром, разрыхлителем и пряничными специями. Эту смесь и тертый имбирь добавить в чашу блендера к маслу &#8212; постепенно, небольшими порциями. Замешивать тесто лучше с помощью блендера, а не руками: песочное тесто не стоит перегревать. К тому же руками можно перемесить тесто, и оно будет слишком жестким. Готовое тесто нужно поставить на час в холодильник.
       </li>
 
-      <li>Охлажденное тесто раскатать скалкой во всех направлениях до толщины 1,5 мм. Используя формы-каттеры, вырезать фигурные печенья, переложить их на выстланный бумагой для выпечки противень и отправить в разогретую до 180 градусов духовку на пять-восемь минут — до появления легкого румянца на краях печений.
+      <li>Охлажденное тесто раскатать скалкой во всех направлениях до толщины 1,5 мм. Используя формы-каттеры, вырезать фигурные печенья, переложить их на выстланный бумагой для выпечки противень и отправить в разогретую до 180 градусов духовку на пять-восемь минут &#8212; до появления легкого румянца на краях печений.
       </li>
     </ol>
 
